# amibot

./: .gitignore  CLAUDE.md  LICENSE  README.md  __main__.py  kustomization.yaml  pyproject.toml  requirements.txt  setup.cfg
.circleci/: config.yml
amibot/: __main__.py
amibot/community/: __init__.py  discord.py  discord_client.py
amibot/configloader/: FromFile.py  FromS3.py  __init__.py
amibot/user/: __init__.py  bot.py  bot_anthropic.py  bot_openai.py  bot_perplexity.py
community/: __init__.py  discord.py
configs/: amibot_example.conf  cloud_settings.json
deployment/cloud/aws/: ecs.tf  iam.tf  terraform.tf  variables.tf
deployment/kubernetes/: namespace.yaml  release.yaml
documentation/: FEATURE_PROPOSAL_AGENT_MCP.md  FEATURE_PROPOSAL_SLACK_SIGNAL.md  FEATURE_REQUEST_CLOUDFLARE_KV_CONFIG.md  README.md  TECHNICAL_DIAGRAMS.md
scripts/: build.sh  get_variablestf.py  run_terraform.sh  start.sh
user/: __init__.py  bot.py
