
[metadata]
name = amibot
version = 0.6.0
author = Carlos A. Morales
author_email = pro@donrudo.com
description = A bot to gpt with from chat platforms.
url = https://www.gitlab.com/donrudo/amibot
license_files = LICENSE

[options]
packages = find:
package_dir =
    =amibot

[options.packages.find]
where = amibot
include = [ user, community]
